@startuml

title __VIEW's Class Diagram__\n

  namespace com.ifgoiano.mvppattern {
    namespace view {
      class com.ifgoiano.mvppattern.view.APIActivity {
          - adapter : ArrayAdapter<String>
          - list : ListView
          - listValues : List<String>
          - progress : ProgressBar
          - retryButton : Button
          {static} + getIntent()
          + onError()
          + onRetry()
          + setValues()
          # onCreate()
      }
    }
  }
  

  namespace com.ifgoiano.mvppattern {
    namespace view {
      class com.ifgoiano.mvppattern.view.HomeActivity {
          - btnApi : Button
          - btnFirebase : Button
          - btnSql : Button
          + startFirebaseActivity()
          + startMVCActivity()
          + startMainActivity()
          # onCreate()
      }
    }
  }
  

  namespace com.ifgoiano.mvppattern {
    namespace view {
      class com.ifgoiano.mvppattern.view.LocalRepositoryActivity {
          ~ datalist : TextView
          ~ datalist_count : TextView
          - adapter : ArrayAdapter<String>
          - list : ListView
          - listValues : List<String>
          - listValuesIDs : List<String>
          + getAllCountries()
          + getCountry()
          + getTotalRegistersCount()
          # onCreate()
          - ShowInputDialog()
          - showDataDialog()
          - showDeleteDialog()
          - showUpdateIdDialog()
      }
    }
  }
  

  namespace com.ifgoiano.mvppattern {
    namespace view {
      class com.ifgoiano.mvppattern.view.RemoteRepositoryActivity {
          # onCreate()
      }
    }
  }
  

  com.ifgoiano.mvppattern.view.APIActivity .up.|> com.ifgoiano.mvppattern.presenter.CountriesAPIPresenter.View
  com.ifgoiano.mvppattern.view.APIActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.ifgoiano.mvppattern.view.APIActivity o-- com.ifgoiano.mvppattern.presenter.CountriesAPIPresenter : presenter
  com.ifgoiano.mvppattern.view.HomeActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.ifgoiano.mvppattern.view.LocalRepositoryActivity .up.|> com.ifgoiano.mvppattern.presenter.CountriesLocalRepositoryPresenter.View
  com.ifgoiano.mvppattern.view.LocalRepositoryActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.ifgoiano.mvppattern.view.LocalRepositoryActivity o-- com.ifgoiano.mvppattern.presenter.CountriesLocalRepositoryPresenter : countriesLocalRepositoryPresenter
  com.ifgoiano.mvppattern.view.RemoteRepositoryActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
